Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9734

QNX: Fetching system environment (from board) does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.8.0
    • Qt Creator 2.8.0
    • QNX Support
    • None
    • Opensuse 12.2, Qt 4.8.4 (self-compiled)

      Fetching the system environment for the configured board (with QNX installed) doesn't work anymore with latest 2.8 branch (fbdbd11a). "Fetch environment" just does nothing and the environment list stays empty. Works with 2.7 branch.
      I'll bisect now.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            frank.osterfeld Frank Osterfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes