EnvironmentAspect: Fix various aspects broken in the refactoring

Switching the base environment needs to update the environment.
Fetching remote environment didn't work.

Task-number: QTCREATORBUG-9734
Change-Id: I4dd0052b364c5c3cfea17d8169de8a235d37b891
Reviewed-by: Christian Kandeler <christian.kandeler@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>